--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </style>
 </head>
 <body>
-  <h3>🎥 Canvas + Camera + Video Recorder</h3>
+  <h3>Video Recorder</h3>
 
   <!-- camera + video -->
   <video id="videoCam" autoplay playsinline muted style="display: none;"></video>
